# BemolCase

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
src/Exploratória/: exploratoria.sql
src/catalog/: ingest_log.jsonl
src/dim/: canon_cidades.txt
src/scripts/: bronze_citymatch_clientes.py  bronze_ingest.py  bronze_produtomatch_transacoes.py  bronze_validate.py  gold_cubo_clientes.sql  gold_sanitycheck.sql  silver_clients.sql  silver_transacoes.sql
