[project]
name = "bemol"
version = "0.1.0"
description = ""
authors = [
    {name = "Leo"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "rapidfuzz (>=3.14.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
